C:/Program Files/Git/admin 관련 디렉터리 구조 변경

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -3,13 +3,13 @@
 <head>
 	<link rel="stylesheet" href="/assets/css/index.css" />
 </head>
-<head th:replace="fragments/html-head.html :: html-head" />
+<head th:replace="admin/fragments/html-head.html :: html-head"/>
 <body>
-<header th:replace="fragments/html-header.html :: html-header" />
+<header th:replace="admin/fragments/html-header.html :: html-header" />
 <div class="container-fluid">	
 	<div class="row">
 		<div class="col-2">
-			<nav th:replace="fragments/html-sidebar.html :: html-sidebar" />
+			<nav th:replace="admin/fragments/html-sidebar.html :: html-sidebar" />
 		</div>
 		<div class="col-10">
 			<div class="index-main container text-center">
