--- a/src/main/resources/templates/admin/signin/SignIn.html
+++ b/src/main/resources/templates/admin/signin/SignIn.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" href="/assets/css/signin/signIn1.css" />
 </head>
-<head th:replace="fragments/html-head.html :: html-head" />
+<head th:replace="admin/fragments/html-head.html :: html-head" />
 <body class="text-center">
     <main class="signIn-main w-100 m-auto">
         <form method="POST" action="/admin/signIn.do">
