--- a/src/main/resources/templates/admin/fragments/html-header.html
+++ b/src/main/resources/templates/admin/fragments/html-header.html
@@ -1,11 +1,11 @@
 <header th:fragment="html-header">
     <nav class="navbar sticky-top bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar w/ text</a>
+          <a class="navbar-brand text-white" href="/admin/">도와조 관리자 페이지</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarText">
+          <div class="collapse navbar-collapse text-white" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
