--- a/src/main/resources/templates/admin/fragments/html-sidebar.html
+++ b/src/main/resources/templates/admin/fragments/html-sidebar.html
@@ -8,9 +8,9 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" th:href="@{/admin/companysManage/companysList?currentPage=1}">
             <span class="align-text-bottom"></span>
-            업체 관리
+            탐정 관리
             </a>
         </li>
         <li class="nav-item">
