--- a/src/main/resources/templates/admin/fragments/html-header.html
+++ b/src/main/resources/templates/admin/fragments/html-header.html
@@ -2,24 +2,14 @@
     <nav class="navbar sticky-top bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand text-white" href="/admin/">도와조 관리자 페이지</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse text-white" id="navbarText">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown button
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="/admin/">마이페이지</a></li>
+              <li><a class="dropdown-item" href="#">관리자 관리</a></li>
             </ul>
-            <span class="navbar-text">
-              Navbar text with an inline element
-            </span>
           </div>
         </div>
       </nav>
