--- a/src/main/resources/templates/admin/signin/SignIn.html
+++ b/src/main/resources/templates/admin/signin/SignIn.html
@@ -16,7 +16,7 @@
                 <input type="password" class="form-control" id="usersPass" name="usersPass" placeholder="비밀번호" value=""/>
                 <label for="usersPass">비밀번호</label>
             </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">로그인</button>
+            <button class="w-100 btn btn-lg btn-dark" type="submit">로그인</button>
         </form>
     </main> 
 </body>
