--- a/src/main/resources/templates/admin/fragments/html-header.html
+++ b/src/main/resources/templates/admin/fragments/html-header.html
@@ -2,13 +2,13 @@
     <nav class="navbar sticky-top bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand text-white" href="/admin/">도와조 관리자 페이지</a>
-          <div class="dropdown">
+          <div class="dropdown" style="margin-right: 3%">
             <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown button
+              관리자 메뉴
             </button>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="/admin/">마이페이지</a></li>
-              <li><a class="dropdown-item" href="#">관리자 관리</a></li>
+              <li><a class="dropdown-item" href="/admin/adminList">관리자 관리</a></li>
             </ul>
           </div>
         </div>
