페이징 처리 수정 PageList, PostList로 분리

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -80,7 +80,7 @@
 						<input type="submit" class="btn btn-primary" value="수정" />
 					</div>
 					<div class="col text-start">
-						<input type="reset" class="btn" value="취소" />
+						<input type="reset" id="cancleBtn" class="btn" value="취소" />
 					</div>
 				</div>
 				</form>
@@ -89,4 +89,5 @@
 	</div>
 </div>
 </body>
+<script type="text/javascript" src="/assets/js/admin/CancleBtn.js"></script>
 </html>
