--- a/src/main/resources/templates/admin/usersmanage/UsersInfo.html
+++ b/src/main/resources/templates/admin/usersmanage/UsersInfo.html
@@ -85,7 +85,7 @@
                     <br/>
                     <div class="">
                         <input type="submit" class="btn btn-primary" value="수정"/>
-                        <input type="reset" class="btn btn-light" value="취소"/>
+                        <input type="reset" id="cancleBtn" class="btn btn-light" value="취소"/>
                     </div>
                 </form>
             </div>            
@@ -94,4 +94,5 @@
 </div>
 </body>
 <script type="module" th:src="@{/assets/js/UsersInfo.js}"></script>
+<script type="text/javascript" src="/assets/js/admin/CancleBtn.js"></script>
 </html>
