--- a/src/main/resources/templates/admin/usersmanage/UsersList.html
+++ b/src/main/resources/templates/admin/usersmanage/UsersList.html
@@ -46,14 +46,19 @@
                             <a class="page-link" th:href="@{/admin/usersManage/usersList(currentPage=${pagination.previousBlock})}">
                                 PREV
                             </a>
-                        </li>
-                        <li class="page-item" th:each="page : ${#numbers.sequence(pagination.blockFirst, pagination.blockLast)}">
+                        </li>              
+                        <li class="page-item" th:if="${pagination.lastBlock < pagination.blockLast}" th:each="page : ${#numbers.sequence(pagination.blockFirst, pagination.lastBlock)}">                           
+                            <a class="page-link" th:href="@{/admin/usersManage/usersList(currentPage=${page})}">
+                                [[${page}]]
+                            </a>
+                        </li>                 
+                        <li class="page-item" th:unless="${pagination.lastBlock < pagination.blockLast}" th:each="page : ${#numbers.sequence(pagination.blockFirst, pagination.blockLast)}">                           
                             <a class="page-link" th:href="@{/admin/usersManage/usersList(currentPage=${page})}">
                                 [[${page}]]
                             </a>
                         </li>
                         <li th:if="${currentPage <= pagination.lastBlock}">
-                            <a class="page-link" th:href="@{/admin/usersManage/usersList(currentPage=${pagination.nextBlock})}">
+                            <a class="page-link" th:if="${pagination.lastBlock >pagination.blockLast}" th:href="@{/admin/usersManage/usersList(currentPage=${pagination.nextBlock})}">
                                 NEXT
                             </a>
                         </li>
