--- a/src/main/resources/templates/admin/usersmanage/FindByUsersAccount.html
+++ b/src/main/resources/templates/admin/usersmanage/FindByUsersAccount.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="/assets/css/index.css" />
     <link rel="stylesheet" href="/assets/css/usersmanage/UsersManage.css" />
-<title>회원 관리 페이지</title>
+<title>회원 검색 결과</title>
 </head>
 <head th:replace="admin/fragments/html-head.html :: html-head" />
 <body>
@@ -15,7 +15,7 @@
         </div>
         <div class="col-10">
             <h3>회원 관리</h3>
-            <form method="GET" action="/admin/usersManage/findByUsersAccount">
+            <form method="GET" action="/admin/usersManage/findByUsersAccount?currentPage=1">
             <div class="input-group">            
                 <input type="text" name="usersAccount" id="usersAccount" class="form-control" placeholder="회원 아이디" aria-label="회원 아이디" aria-describedby="searchBtn">
                 <input class="btn btn-outline-secondary" type="submit" id="searchBtn" value="검색" />
@@ -33,13 +33,14 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr th:if="userList != null" th:each="usersList : ${usersList}">
+                        <tr th:if="${usersList} != null" th:each="usersList : ${usersList}">
                             <td>[[${usersList.usersIdx}]]</td>
                             <td><a th:href="@{/admin/usersManage/usersInfo(usersAccount=${usersList.usersAccount})}">[[${usersList.usersAccount}]]</a></td>
                             <td>[[${usersList.usersRole}]]</td>
                             <td>[[${usersList.usersJoinDate}]]</td>
                         </tr>
-                        <tr th:unless="userList != null">
+                        <tr th:unless="${usersList} != null">
+                            <td></td>
                             <td></td>
                             <td></td>
                             <td></td>
@@ -51,22 +52,22 @@
                 <nav th:if="pagination != null">
                     <ul class="pagination">
                         <li th:if="${pagination.blockCount < currentPage}">
-                            <a class="page-link" th:href="@{/admin/usersManage/usersList(currentPage=${pagination.previousBlock})}">
+                            <a class="page-link" th:href="@{/admin/usersManage/findByUsersAccount(currentPage=${page},usersAccount=${usersAccount})}">
                                 PREV
                             </a>
                         </li>              
                         <li class="page-item" th:if="${pagination.lastBlock < pagination.blockLast}" th:each="page : ${#numbers.sequence(pagination.blockFirst, pagination.lastBlock)}">                           
-                            <a class="page-link" th:href="@{/admin/usersManage/usersList(currentPage=${page})}">
+                            <a class="page-link" th:href="@{/admin/usersManage/findByUsersAccount(currentPage=${page},usersAccount=${usersAccount})}">
                                 [[${page}]]
                             </a>
                         </li>                 
                         <li class="page-item" th:unless="${pagination.lastBlock < pagination.blockLast}" th:each="page : ${#numbers.sequence(pagination.blockFirst, pagination.blockLast)}">                           
-                            <a class="page-link" th:href="@{/admin/usersManage/usersList(currentPage=${page})}">
+                            <a class="page-link" th:href="@{/admin/usersManage/findByUsersAccount(currentPage=${page},usersAccount=${usersAccount})}">
                                 [[${page}]]
                             </a>
                         </li>
                         <li th:if="${currentPage <= pagination.lastBlock}">
-                            <a class="page-link" th:if="${pagination.lastBlock >pagination.blockLast}" th:href="@{/admin/usersManage/usersList(currentPage=${pagination.nextBlock})}">
+                            <a class="page-link" th:if="${pagination.lastBlock >pagination.blockLast}" th:href="@{/admin/usersManage/findByUsersAccount(currentPage=${page},usersAccount=${usersAccount})}">
                                 NEXT
                             </a>
                         </li>
