--- a/src/main/resources/templates/admin/usersmanage/UsersList.html
+++ b/src/main/resources/templates/admin/usersmanage/UsersList.html
@@ -48,7 +48,7 @@
                 </table>
             </div>
             <div class="">
-                <nav th:if="pagination != null">
+                <nav th:if="${pagination} != null">
                     <ul class="pagination">
                         <li th:if="${pagination.blockCount < currentPage}">
                             <a class="page-link" th:href="@{/admin/usersManage/usersList(currentPage=${pagination.previousBlock})}">
@@ -66,7 +66,7 @@
                             </a>
                         </li>
                         <li th:if="${currentPage <= pagination.lastBlock}">
-                            <a class="page-link" th:if="${pagination.lastBlock >pagination.blockLast}" th:href="@{/admin/usersManage/usersList(currentPage=${pagination.nextBlock})}">
+                            <a class="page-link" th:if="${pagination.lastBlock > pagination.blockLast}" th:href="@{/admin/usersManage/usersList(currentPage=${pagination.nextBlock})}">
                                 NEXT
                             </a>
                         </li>
