--- a/src/main/resources/templates/admin/fragments/html-sidebar.html
+++ b/src/main/resources/templates/admin/fragments/html-sidebar.html
@@ -14,7 +14,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" th:href="@{/admin/reviewManage/reviewList?currentPage=1}">
             <span class="align-text-bottom"></span>
             리뷰 관리
             </a>
